WIP toward semantic types
Refactor image module to support generic channel types and improve struct definitions

- Introduced a macro to create transparent newtype wrappers for Guid and Thou.
- Updated PlyDesc and BandDesc to use Thou instead of i32 for top_thou and bot_thou.
- Enhanced Im struct to accept a generic type for channel specifications, allowing for better type safety.
- Added methods for translating MPoly instances and rasterizing them into images.
- Modified label_im function to accommodate the new generic Im struct.
- Updated PNG saving methods to work with the new generic Im struct.
- Cleaned up main function to reflect changes in data structures and improve clarity.
- Added tests to ensure functionality remains intact after refactoring.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ im-io = ["dep:image"]
 
 # Optional connected-component labeling utilities.
 im-label = []
+
+# Work-in-progress cut planning/raster pipeline.
+cut-stack = []
