feat: add debug UI for image visualization
- Updated Cargo.toml to include eframe as an optional dependency and added a new feature `debug_ui`.
- Enhanced the `Im` struct to include a `debug_im` method for opening a debug UI window for images.
- Implemented a new module `debug_ui` for rendering images with hover functionality to display pixel values.
- Modified the main application logic to invoke the debug UI for both `ply_im` and `region_im` images.
- Added a README section for building the project with CLI-only features.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,26 @@ image = { version = "0.25", optional = true }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 clipper2 = "0.5.3"
+eframe = { version = "0.27", optional = true }
 
 [features]
 # Keep current behavior by default (PNG IO + labeling compiled in).
-default = ["im-io", "im-label"]
+default = ["im-io", "im-label", "debug_ui"]
 
 # Optional PNG IO for Im.
 im-io = ["dep:image"]
 
 # Optional connected-component labeling utilities.
 im-label = []
+
+# Image debugging UI window (hover to read pixel values).
+debug_ui = ["dep:eframe"]
+
+# Compile without the debug UI (CLI-only builds). Note: Cargo features are additive,
+# so to avoid building UI deps you must also pass `--no-default-features`.
+#
+# This is intended to approximate "default features minus debug_ui".
+cli_only = ["im-io", "im-label"]
 
 # Work-in-progress cut planning/raster pipeline.
 cut-stack = []
